[gd_scene load_steps=2 format=3 uid="uid://cp84t5412c2l7"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_qibfi"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_qibfi")

[node name="Damage" type="Label" parent="."]
offset_left = 77.0
offset_top = 467.0
offset_right = 125.0
offset_bottom = 490.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "5 dmg"
metadata/_edit_use_anchors_ = true

[node name="Health" type="Label" parent="."]
offset_left = 78.0
offset_top = 507.0
offset_right = 140.0
offset_bottom = 530.0
theme_override_colors/font_color = Color(0.917647, 0, 0, 1)
text = "100 <3"
metadata/_edit_use_anchors_ = true

[node name="SmallMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
metadata/_edit_use_anchors_ = true

[node name="BigMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -122.0
offset_right = 48.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 0
text = "Start Game"
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
